backend/error_log.txt
Error in analyze_face_geometry: module 'mediapipe' has no attribute 'solutions'
Traceback (most recent call last):
  File "E:\Deepfake Forensics with Explainable AI\backend\main.py", line 217, in run_with_fallback
    return func(*args, **kwargs)
  File "E:\Deepfake Forensics with Explainable AI\backend\pipeline\face_geometry.py", line 427, in analyze_face_geometry
    landmarks_first = detect_face(image_rgb)
  File "E:\Deepfake Forensics with Explainable AI\backend\pipeline\face_geometry.py", line 31, in detect_face
    with mp.solutions.face_mesh.FaceMesh(
         ^^^^^^^^^^^^
AttributeError: module 'mediapipe' has no attribute 'solutions'
Error in analyze_lighting: module 'mediapipe' has no attribute 'solutions'
Traceback (most recent call last):
  File "E:\Deepfake Forensics with Explainable AI\backend\main.py", line 217, in run_with_fallback
    return func(*args, **kwargs)
  File "E:\Deepfake Forensics with Explainable AI\backend\pipeline\lighting_analysis.py", line 32, in analyze_lighting
    landmarks = detect_face(image_rgb)
  File "E:\Deepfake Forensics with Explainable AI\backend\pipeline\face_geometry.py", line 31, in detect_face
    with mp.solutions.face_mesh.FaceMesh(
         ^^^^^^^^^^^^
AttributeError: module 'mediapipe' has no attribute 'solutions'
Error in analyze_lighting: float division by zero
Traceback (most recent call last):
  File "E:\Deepfake Forensics with Explainable AI\backend\main.py", line 217, in run_with_fallback
    return func(*args, **kwargs)
  File "E:\Deepfake Forensics with Explainable AI\backend\pipeline\lighting_analysis.py", line 74, in analyze_lighting
    nx = math.cos(theta) / a
         ~~~~~~~~~~~~~~~~^~~
ZeroDivisionError: float division by zero
Error in analyze_face_geometry: OpenCV(4.13.0) D:\a\opencv-python\opencv-python\opencv\modules\imgproc\src\color.cpp:199: error: (-215:Assertion failed) !_src.empty() in function 'cv::cvtColor'

Traceback (most recent call last):
  File "E:\Deepfake Forensics with Explainable AI\backend\main.py", line 217, in run_with_fallback
    return func(*args, **kwargs)
  File "E:\Deepfake Forensics with Explainable AI\backend\pipeline\face_geometry.py", line 456, in analyze_face_geometry
    texture, tex_map_path = compute_texture_consistency(image_rgb, bbox, output_dir, prefix)
                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "E:\Deepfake Forensics with Explainable AI\backend\pipeline\face_geometry.py", line 152, in compute_texture_consistency
    face_region = cv2.cvtColor(image_rgb[y1:y2, x1:x2], cv2.COLOR_RGB2GRAY)
cv2.error: OpenCV(4.13.0) D:\a\opencv-python\opencv-python\opencv\modules\imgproc\src\color.cpp:199: error: (-215:Assertion failed) !_src.empty() in function 'cv::cvtColor'

